--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BAZA WIEDZY</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Search Input</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
   <div class="search-container">
     <input type="text" id="search-input" placeholder="Search...">
+    <button id="search-button">Search</button>
     <ul id="suggestions" class="suggestions"></ul>
   </div>
   <ul id="word-list">
     <li><a href="./word-list/apple.html">apple</a></li>
-
+    <li><a href="https://example.com/banana">banana</a></li>
+    <li><a href="https://example.com/cherry">cherry</a></li>
+    <li><a href="https://example.com/date">date</a></li>
+    <li><a href="https://example.com/elderberry">elderberry</a></li>
+    <li><a href="https://example.com/fig">fig</a></li>
+    <li><a href="https://example.com/grape">grape</a></li>
+    <li><a href="https://example.com/honeydew">honeydew</a></li>
   </ul>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
