--- a/index.html
+++ b/index.html
@@ -14,15 +14,9 @@
     <button id="search-button">Search</button>
     <ul id="suggestions" class="suggestions"></ul>
   </div>
-  <ul id="word-list">
+  <ul id="word-list" style="display: none;">
     <li><a href="./word-list/apple.html">apple</a></li>
-    <li><a href="https://example.com/banana">banana</a></li>
-    <li><a href="https://example.com/cherry">cherry</a></li>
-    <li><a href="https://example.com/date">date</a></li>
-    <li><a href="https://example.com/elderberry">elderberry</a></li>
-    <li><a href="https://example.com/fig">fig</a></li>
-    <li><a href="https://example.com/grape">grape</a></li>
-    <li><a href="https://example.com/honeydew">honeydew</a></li>
+
   </ul>
   <script src="./script.js"></script>
 </body>
