--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Search Input</title>
+  <title>BAZA WIEDZY</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -13,9 +13,15 @@
     <input type="text" id="search-input" placeholder="Search...">
     <button id="search-button">Search</button>
     <ul id="suggestions" class="suggestions"></ul>
+
   </div>
+  <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
   <ul id="word-list" style="display: none;">
     <li><a href="./word-list/apple.html">apple</a></li>
+    <li><a href="./word-list/apple.html">aapple</a></li>
+    <li><a href="./word-list/apple.html">aaapple</a></li>
+    <li><a href="./word-list/apple.html">aaaapple</a></li>
+    <li><a href="./word-list/apple.html">aaaaapple</a></li>
 
   </ul>
   <script src="./script.js"></script>
