--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
   </div>
   <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
   <ul id="word-list" style="display: none;">
-    <li><a href="./word-list/apple.html">apple</a></li>
-    <li><a href="./word-list/apple.html">aapple</a></li>
-    <li><a href="./word-list/apple.html">aaapple</a></li>
-    <li><a href="./word-list/apple.html">aaaapple</a></li>
-    <li><a href="./word-list/apple.html">aaaaapple</a></li>
+    <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
+
 
   </ul>
   <script src="./script.js"></script>
