--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </div>
   <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
-  <ul id="word-list" style="display: none;">
+  <ul id="word-list">
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
 
 
