--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
   <ul id="word-list">
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
+    <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
+
 
 
   </ul>
