--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BAZA WIEDZY</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -19,6 +19,7 @@
   <ul id="word-list">
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
     <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
+    <li><a href="./word-list/i/interpreter.html">algorytm</a></li>
 
 
 
