--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <ul id="word-list">
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
     <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
-    <li><a href="./word-list/i/interpreter.html">algorytm</a></li>
+    <li><a href="./word-list/a/algorytm.html">algorytm</a></li>
+    <li><a href="./word-list/f/framework.html">framework/ struktura</a></li>
 
 
 
