--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
     <li><a href="./word-list/a/algorytm.html">algorytm</a></li>
     <li><a href="./word-list/f/framework.html">framework/ struktura</a></li>
+    <li><a href="./word-list/f/framework.html">React</a></li>
 
 
 
