--- a/word-list/r/react.html
+++ b/word-list/r/react.html
@@ -11,7 +11,7 @@
 <body>
   <p class="definition"><b>React.js</b>(EN-reagować) React.js biblioteka języka programowania JavaScript, która
     wykorzystywana jest do tworzenia interfejsów graficznych
-    aplikacji internetowych.</p><a>https://react.dev/</a>
+    aplikacji internetowych.</p><a href="https://react.dev/">https://react.dev/</a>
 </body>
 
 </html>
