--- a/word-list/f/framework.html
+++ b/word-list/f/framework.html
@@ -12,6 +12,13 @@
   <p class="definition"><b>Framework</b>(EN-struktura) (platforma programistyczna) jest to szkielet do budowy aplikacji,
     który dostarcza niezbędne biblioteki i
     komponenty oraz definiuje strukturę i działanie danej aplikacji.</p>
+  <p>Obecnie, używając JavaScript, możesz tworzyć:
+
+    aplikacje webowe na frameworkach <a href="../r/react.html">React</a>, <a href="../v/vue.html">Vue</a>,
+    <a>Angular</a> itp;
+    aplikacje backendowe na <a>Node.js</a>;
+    aplikacje mobilne na <a>React Native</a>;
+    aplikacje desktopowe przy użyciu <a>Electron</a>.</p>
 </body>
 
 </html>
