--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8">
@@ -20,8 +20,18 @@
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
     <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
     <li><a href="./word-list/a/algorytm.html">algorytm</a></li>
-    <li><a href="./word-list/f/framework.html">framework/ struktura</a></li>
-    <li><a href="./word-list/f/framework.html">React.js</a></li>
+    <li><a href="./word-list/f/framework.html">framework</a></li>
+    <li><a href="./word-list/r/react.html">React.js</a></li>
+    <li><a href="./word-list/v/vue.html">Vue.js</a></li>
+    <li><a href="./word-list/a/angular.html">Angular</a></li>
+    <li><a href="./word-list/a/angular.html">Node.js</a></li>
+    <li><a href="./word-list/r/ReactNative.html">React Native</a></li>
+    <li><a href="./word-list/e/electron.html">Electron</a></li>
+    <li><a href="./word-list/i/instrukcja.html">instrukcja</a></li>
+    <li><a href="./word-list/i/instrukcja.html">statement</a></li>
+    <li><a href="./word-list/w/wyrażenie.html">wyrażenie</a></li>
+    <li><a href="./word-list/w/wyrażenie.html">expression</a></li>
+
 
 
 
