--- a/word-list/f/framework.html
+++ b/word-list/f/framework.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8">
@@ -12,13 +12,14 @@
   <p class="definition"><b>Framework</b>(EN-struktura) (platforma programistyczna) jest to szkielet do budowy aplikacji,
     który dostarcza niezbędne biblioteki i
     komponenty oraz definiuje strukturę i działanie danej aplikacji.</p>
-  <p>Obecnie, używając JavaScript, możesz tworzyć:
+  <p class="definition">Obecnie, używając JavaScript, możesz tworzyć:<br>
 
     aplikacje webowe na frameworkach <a href="../r/react.html">React</a>, <a href="../v/vue.html">Vue</a>,
-    <a>Angular</a> itp;
-    aplikacje backendowe na <a>Node.js</a>;
-    aplikacje mobilne na <a>React Native</a>;
-    aplikacje desktopowe przy użyciu <a>Electron</a>.</p>
+    <a href="../a/angular.html">Angular</a> itp;<br>
+    aplikacje backendowe na <a href="../n/node.html">Node.js</a>;<br>
+    aplikacje mobilne na <a href="../r/ReactNative.html">React Native</a>;<br>
+    aplikacje desktopowe przy użyciu <a href="../e/electron.html">Electron</a>.
+  </p>
 </body>
 
 </html>
