--- a/word-list/a/algorytm.html
+++ b/word-list/a/algorytm.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>algorytm</title>
 </head>
 
 <body>
-  <p class="definition"><b>Algorytm</b> to zestaw kroków, które należy wykonać, aby osiągnąć określony cel.
+  <p><b>Algorytm</b> to zestaw kroków, które należy wykonać, aby osiągnąć określony cel.
     W naszym codziennym życiu cały czas
     korzystamy z algorytmów. Na przykład proces parzenia herbaty to zestaw niezbędnych kroków: zagotować wodę —>
     odmierzyć
