--- a/word-list/e/electron.html
+++ b/word-list/e/electron.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Electron</title>
 </head>
 
 <body>
-  <p class="definition"><b>Electron</b> otwartoźródłowa platforma programistyczna stworzona przez Cheng Zhao podczas
+  <p><b>Electron</b> otwartoźródłowa platforma programistyczna stworzona przez Cheng Zhao podczas
     odbywania przez niego praktyk w
     firmie Intel, a potem dalej rozwijana przez Github.</p><a
     href="https://www.electronjs.org/">https://www.electronjs.org/</a>
