--- a/word-list/f/framework.html
+++ b/word-list/f/framework.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Framework</title>
 </head>
 
 <body>
-  <p class="definition"><b>Framework</b>(EN-struktura) (platforma programistyczna) jest to szkielet do budowy aplikacji,
+  <p><b>Framework</b>(EN-struktura) (platforma programistyczna) jest to szkielet do budowy aplikacji,
     który dostarcza niezbędne biblioteki i
     komponenty oraz definiuje strukturę i działanie danej aplikacji.</p>
-  <p class="definition">Obecnie, używając JavaScript, możesz tworzyć:<br>
+  <p>Obecnie, używając JavaScript, możesz tworzyć:<br>
 
     aplikacje webowe na frameworkach <a href="../r/react.html">React</a>, <a href="../v/vue.html">Vue</a>,
     <a href="../a/angular.html">Angular</a> itp;<br>
