--- a/word-list/i/instrukcja.html
+++ b/word-list/i/instrukcja.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <p class="definition"><b>Instrukcja (EN statement)</b> jest powiązanym zestawem słów i symboli ze składni języka,
+  <p><b>Instrukcja (EN statement)</b> jest powiązanym zestawem słów i symboli ze składni języka,
     które są połączone w celu wyrażenia
     pojedynczej idei, tj. pojedynczej instrukcji dla maszyny.<br><br> <b>Jak będzie działać ta instrukcja?</b><br><br>
 
