--- a/word-list/i/interpreter.html
+++ b/word-list/i/interpreter.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>interpreter</title>
 </head>
 
 <body>
-  <p class="definition"><b>Interpreter</b> to taki program, który czyta kod linijka po linijce i wykonuje
+  <p><b>Interpreter</b> to taki program, który czyta kod linijka po linijce i wykonuje
     jego instrukcje. Kod jest więc po prostu
     zestawem instrukcji. Interpreter wykonuje je jedna po drugiej i dzięki temu programy działają i czynią swoją magię.
   </p>
