--- a/word-list/k/kompilator.html
+++ b/word-list/k/kompilator.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>kompilator</title>
 </head>
 
 <body>
-  <p class="definition"><b>Kompilator</b> to program, który tłumaczy kod napisany w jednym języku, nazywanym językiem
+  <p><b>Kompilator</b> to program, który tłumaczy kod napisany w jednym języku, nazywanym językiem
     źródłowym
     na równoważny mu
     kod
