--- a/word-list/n/node.html
+++ b/word-list/n/node.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Node.js</title>
 </head>
 
 <body>
-  <p class="definition"><b>Node.js</b> wieloplatformowe środowisko uruchomieniowe o otwartym kodzie do tworzenia
+  <p><b>Node.js</b> wieloplatformowe środowisko uruchomieniowe o otwartym kodzie do tworzenia
     aplikacji typu server-side
     napisanych w języku JavaScript..</p><a href="https://nodejs.org/en">https://nodejs.org/en</a>
 </body>
