--- a/word-list/r/react.html
+++ b/word-list/r/react.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>React.js</title>
 </head>
 
 <body>
-  <p class="definition"><b>React.js</b>(EN-reagować) React.js biblioteka języka programowania JavaScript, która
+  <p><b>React.js</b>(EN-reagować) React.js biblioteka języka programowania JavaScript, która
     wykorzystywana jest do tworzenia interfejsów graficznych
     aplikacji internetowych.</p><a href="https://react.dev/">https://react.dev/</a>
 </body>
