--- a/word-list/a/angular.html
+++ b/word-list/a/angular.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Angular</title>
 </head>
 
 <body>
-  <p class="definition"><b>Angular</b> otwarty framework i platforma do tworzenia SPA, napisany w języku TypeScript i
+  <p><b>Angular</b> otwarty framework i platforma do tworzenia SPA, napisany w języku TypeScript i
     wspierany oraz rozwijany przez
     Google.</p><a href="https://v17.angular.io/guide/architecture">https://v17.angular.io/guide/architecture</a>
 </body>
