--- a/word-list/r/ReactNative.html
+++ b/word-list/r/ReactNative.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Node.js</title>
 </head>
 
 <body>
-  <p class="definition"><b>React Native</b> otwartoźródłowy zestaw narzędzi dla programistów przeznaczony do tworzenia
+  <p><b>React Native</b> otwartoźródłowy zestaw narzędzi dla programistów przeznaczony do tworzenia
     natywnych,
     wieloplatformowych aplikacji mobilnych, komputerowych, internetowych oraz aplikacji dla telewizorowych systemów
     operacyjnych, stworzony przez firmę Facebook, Inc., korzystający z biblioteki tego samego twórcy, React.js.</p><a
