--- a/word-list/v/vue.html
+++ b/word-list/v/vue.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../../style.css">
   <title>Vue.js</title>
 </head>
 
 <body>
-  <p class="definition"><b>Vue.js</b> otwartoźródłowy framework do aplikacji webowych typu front-end, oparty na języku
+  <p><b>Vue.js</b> otwartoźródłowy framework do aplikacji webowych typu front-end, oparty na języku
     JavaScript oraz modelu
     Model-View-Controller.</p><a href="https://vuejs.org/">https://vuejs.org/</a>
 </body>
