--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   </div>
   <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
-  <ul id="word-list">
+  <ul id="word-list" style="display: none;">
     <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
     <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
     <li><a href="./word-list/a/algorytm.html">algorytm</a></li>
@@ -31,6 +31,26 @@
     <li><a href="./word-list/i/instrukcja.html">statement</a></li>
     <li><a href="./word-list/w/wyrażenie.html">wyrażenie</a></li>
     <li><a href="./word-list/w/wyrażenie.html">expression</a></li>
+    <li><a href="./word-list/s/script.html">script</a></li>
+    <li><a href="./word-list/s/strict.html">use strict</a></li>
+    <li><a href="./word-list/s/strict.html">tryb ścisły</a></li>
+    <li><a href="./word-list/s/strict.html">strict mode</a></li>
+    <li><a href="./word-list/c/console.html">console</a></li>
+    <li><a href="./word-list/c/console.html">konsola</a></li>
+    <li><a href="./word-list/c/console.html">console.log()</a></li>
+    <li><a href="./word-list/z/zmienne.html">zmienne</a></li>
+    <li><a href="./word-list/z/zmienne.html">const</a></li>
+    <li><a href="./word-list/z/zmienne.html">let</a></li>
+    <li><a href="./word-list/z/zmienne.html">variable</a></li>
+    <li><a href="./word-list/s/słowaKluczowe.html">słowa kluczowe</a></li>
+    <li><a href="./word-list/c/camelCase.html">camelCase</a></li>
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">prymitywne typy danych</a></li>
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">primitive data types</a></li>
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">typy prymitywne</a></li>
+    <li><a href="./word-list/n/number.html">number</a></li>
+    <li><a href="./word-list/n/number.html">liczby</a></li>
+    <li><a href="./word-list/s/string.html">string</a></li>
+    <li><a href="./word-list/s/string.html">ciąg znaków</a></li>
 
 
 
