--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
     <li><a href="./word-list/n/number.html">liczby</a></li>
     <li><a href="./word-list/s/string.html">string</a></li>
     <li><a href="./word-list/s/string.html">ciąg znaków</a></li>
+    <li><a href="./word-list/b/boolean.html">boolean</a></li>
+    <li><a href="./word-list/b/boolean.html">wartość logiczna</a></li>
+    <li><a href="./word-list/b/boolean.html">true</a></li>
+    <li><a href="./word-list/b/boolean.html">false</a></li>
+    <li><a href="./word-list/n/null.html">null</a></li>
+    <li><a href="./word-list/u/undefined.html">undefined</a></li>
+    <li><a href="./word-list/t/typeof.html">typeof</a></li>
 
 
 
