--- a/word-list/p/PrymitywneTypyDanych.html
+++ b/word-list/p/PrymitywneTypyDanych.html
@@ -15,13 +15,14 @@
     Typy danych:<br>
   <p><a href="../n/number.html">Number</a> - liczby (np. 42, 3.14)</p>
   <p><a href="../s/string.html">String</a> - ciągi znaków (np. "hello")</p>
-  <p><a href="">Boolean</a> - wartości logiczne (np. true, false)</p>
-  <p><a href="">Undefined</a> - specjalna wartość oznaczająca, że zmienna została zadeklarowana, ale nie przypisano do
+  <p><a href="../b/boolean.html">Boolean</a> - wartości logiczne (np. true, false)</p>
+  <p><a href="../u/undefined.html">Undefined</a> - specjalna wartość oznaczająca, że zmienna została zadeklarowana, ale
+    nie przypisano do
     niej wartości</p>
-  <p><a href="">Null</a> - specjalna wartość oznaczająca brak wartości</p>
+  <p><a href="../n/null.html">Null</a> - specjalna wartość oznaczająca brak wartości</p>
   <p><a href="">Symbol</a> - nowy prymitywny typ dodany w ECMAScript 6 (ES6)</p>
   <p><a href="">BigInt</a> - liczby całkowite o dowolnej precyzji, dodany w ECMAScript 2020 (ES11)</p>
-  <p>Operator <a href="">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
+  <p>Operator <a href="../t/typeof.html">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
   </p><br><br>
 
 
