--- a/word-list/u/undefined.html
+++ b/word-list/u/undefined.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../style.css">
-  <title>String</title>
+  <title>undefined</title>
 </head>
 
 <body>
   <p>
-    <b>Ciąg znaków (String)</b> — to sekwencja znaków ujęta w pojedyncze **''** lub podwójne "" cudzysłowy.
+    Wartość <b>undefined</b> jest automatycznie przypisywana do zmiennej, jeśli:<br>
+    zmienna została jawnie ustawiona na undefined;<br>
+    zmienna została zadeklarowana, ale nie została jeszcze zainicjalizowana wartością.<br>
+    Wartość undefined wskazuje, że wartość zmiennej jest niezdefiniowana.
   </p>
   <pre>
-      const username <span>=</span> <span><b>'Mango995'</b></span><span>;</span>
-      const description <span>=</span> <span><b>"JavaScript is awesome!"</b></span><span>;</span>
+      let value<span>;</span>
+      console.log(value)<span>;</span> // <b>undefined</b>
    </pre>
-
 
   <p>Operator <a href="">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
 
