--- a/word-list/n/null.html
+++ b/word-list/n/null.html
@@ -5,18 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../style.css">
-  <title>String</title>
+  <title>null</title>
 </head>
 
 <body>
   <p>
-    <b>Ciąg znaków (String)</b> — to sekwencja znaków ujęta w pojedyncze **''** lub podwójne "" cudzysłowy.
+    Wartość <b>null</b> wyraźnie wskazuje, że wartość nie istnieje i jest często używana przez programistów do wskazania
+    pustej
+    wartości. Wartość ta musi być wyraźnie przypisana do zmiennej, aby wskazać, że zmienna nie zawiera żadnych
+    prawidłowych
+    danych.
   </p>
   <pre>
-      const username <span>=</span> <span><b>'Mango995'</b></span><span>;</span>
-      const description <span>=</span> <span><b>"JavaScript is awesome!"</b></span><span>;</span>
+      let value <span>=</span> <span><b>null</b></span><span>;</span>
+      console.log(value)<span>;</span> // <b>null</b>
    </pre>
-
 
   <p>Operator <a href="">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
 
