--- a/index.html
+++ b/index.html
@@ -17,47 +17,52 @@
   </div>
   <iframe id="iframe" class="iframe" style="display: none;" width="100%" height="500px"></iframe>
   <ul id="word-list" style="display: none;">
-    <li><a href="./word-list/k/kompilator.html">kompilator</a></li>
-    <li><a href="./word-list/i/interpreter.html">interpreter</a></li>
-    <li><a href="./word-list/a/algorytm.html">algorytm</a></li>
-    <li><a href="./word-list/f/framework.html">framework</a></li>
-    <li><a href="./word-list/r/react.html">React.js</a></li>
-    <li><a href="./word-list/v/vue.html">Vue.js</a></li>
-    <li><a href="./word-list/a/angular.html">Angular</a></li>
-    <li><a href="./word-list/a/angular.html">Node.js</a></li>
-    <li><a href="./word-list/r/ReactNative.html">React Native</a></li>
-    <li><a href="./word-list/e/electron.html">Electron</a></li>
-    <li><a href="./word-list/i/instrukcja.html">instrukcja</a></li>
-    <li><a href="./word-list/i/instrukcja.html">statement</a></li>
-    <li><a href="./word-list/w/wyrażenie.html">wyrażenie</a></li>
-    <li><a href="./word-list/w/wyrażenie.html">expression</a></li>
-    <li><a href="./word-list/s/script.html">script</a></li>
-    <li><a href="./word-list/s/strict.html">use strict</a></li>
-    <li><a href="./word-list/s/strict.html">tryb ścisły</a></li>
-    <li><a href="./word-list/s/strict.html">strict mode</a></li>
-    <li><a href="./word-list/c/console.html">console</a></li>
-    <li><a href="./word-list/c/console.html">konsola</a></li>
-    <li><a href="./word-list/c/console.html">console.log()</a></li>
-    <li><a href="./word-list/z/zmienne.html">zmienne</a></li>
-    <li><a href="./word-list/z/zmienne.html">const</a></li>
-    <li><a href="./word-list/z/zmienne.html">let</a></li>
-    <li><a href="./word-list/z/zmienne.html">variable</a></li>
-    <li><a href="./word-list/s/słowaKluczowe.html">słowa kluczowe</a></li>
-    <li><a href="./word-list/c/camelCase.html">camelCase</a></li>
-    <li><a href="./word-list/p/PrymitywneTypyDanych.html">prymitywne typy danych</a></li>
-    <li><a href="./word-list/p/PrymitywneTypyDanych.html">primitive data types</a></li>
-    <li><a href="./word-list/p/PrymitywneTypyDanych.html">typy prymitywne</a></li>
-    <li><a href="./word-list/n/number.html">number</a></li>
-    <li><a href="./word-list/n/number.html">liczby</a></li>
-    <li><a href="./word-list/s/string.html">string</a></li>
-    <li><a href="./word-list/s/string.html">ciąg znaków</a></li>
-    <li><a href="./word-list/b/boolean.html">boolean</a></li>
-    <li><a href="./word-list/b/boolean.html">wartość logiczna</a></li>
-    <li><a href="./word-list/b/boolean.html">true</a></li>
-    <li><a href="./word-list/b/boolean.html">false</a></li>
-    <li><a href="./word-list/n/null.html">null</a></li>
-    <li><a href="./word-list/u/undefined.html">undefined</a></li>
-    <li><a href="./word-list/t/typeof.html">typeof</a></li>
+    <li><a href="./word-list/k/kompilator.html">kompilator</a></li><!--1-->
+    <li><a href="./word-list/i/interpreter.html">interpreter</a></li><!--2-->
+    <li><a href="./word-list/a/algorytm.html">algorytm</a></li><!--3-->
+    <li><a href="./word-list/f/framework.html">framework</a></li><!--4-->
+    <li><a href="./word-list/r/react.html">React.js</a></li><!--5-->
+    <li><a href="./word-list/v/vue.html">Vue.js</a></li><!--6-->
+    <li><a href="./word-list/a/angular.html">Angular</a></li><!--7-->
+    <li><a href="./word-list/a/angular.html">Node.js</a></li><!--8-->
+    <li><a href="./word-list/r/ReactNative.html">React Native</a></li><!--9-->
+    <li><a href="./word-list/e/electron.html">Electron</a></li><!--10-->
+    <li><a href="./word-list/i/instrukcja.html">instrukcja</a></li><!--11-->
+    <li><a href="./word-list/i/instrukcja.html">statement</a></li><!--11-->
+    <li><a href="./word-list/w/wyrażenie.html">wyrażenie</a></li><!--12-->
+    <li><a href="./word-list/w/wyrażenie.html">expression</a></li><!--12-->
+    <li><a href="./word-list/s/script.html">script</a></li><!--13-->
+    <li><a href="./word-list/s/strict.html">use strict</a></li><!--14-->
+    <li><a href="./word-list/s/strict.html">tryb ścisły</a></li><!--14-->
+    <li><a href="./word-list/s/strict.html">strict mode</a></li><!--14-->
+    <li><a href="./word-list/c/console.html">console</a></li><!--15-->
+    <li><a href="./word-list/c/console.html">konsola</a></li><!--15-->
+    <li><a href="./word-list/c/console.html">console.log()</a></li><!--15-->
+    <li><a href="./word-list/z/zmienne.html">zmienne</a></li><!--16-->
+    <li><a href="./word-list/z/zmienne.html">const</a></li><!--16-->
+    <li><a href="./word-list/z/zmienne.html">let</a></li><!--16-->
+    <li><a href="./word-list/z/zmienne.html">variable</a></li><!--16-->
+    <li><a href="./word-list/s/słowaKluczowe.html">słowa kluczowe</a></li><!--17-->
+    <li><a href="./word-list/c/camelCase.html">camelCase</a></li><!--18-->
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">prymitywne typy danych</a></li><!--19-->
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">primitive data types</a></li><!--19-->
+    <li><a href="./word-list/p/PrymitywneTypyDanych.html">typy prymitywne</a></li><!--19-->
+    <li><a href="./word-list/n/number.html">number</a></li><!--20-->
+    <li><a href="./word-list/n/number.html">liczby</a></li><!--20-->
+    <li><a href="./word-list/s/string.html">string</a></li><!--21-->
+    <li><a href="./word-list/s/string.html">ciąg znaków</a></li><!--21-->
+    <li><a href="./word-list/b/boolean.html">boolean</a></li><!--22-->
+    <li><a href="./word-list/b/boolean.html">wartość logiczna</a></li><!--22-->
+    <li><a href="./word-list/b/boolean.html">true</a></li><!--22-->
+    <li><a href="./word-list/b/boolean.html">false</a></li><!--22-->
+    <li><a href="./word-list/n/null.html">null</a></li><!--23-->
+    <li><a href="./word-list/u/undefined.html">undefined</a></li><!--24-->
+    <li><a href="./word-list/t/typeof.html">typeof</a></li><!--25-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">operatory matematyczne</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">mathematical operators</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">operators</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">operatory złożone</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">operatory arytmetyczne</a></li><!--26-->
 
 
 
