--- a/word-list/t/typeof.html
+++ b/word-list/t/typeof.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../../style.css">
-  <title>undefined</title>
+  <title>typeof</title>
 </head>
 
 <body>
@@ -13,7 +13,7 @@
     Operator <b>typeof</b> służy do określania typu danych wartości lub wyrażenia.
   </p>
   <pre>const quantity = <span>17</span>;
-<span>log</span>(<span><b>typeof</b></span> quantity); <span>// wyświetli "number"</span>
+<span>console</span>.<span>log</span>(<span><b>typeof</b></span> quantity); <span>// wyświetli "number"</span>
 
 const message = <span>"JavaScript is awesome!"</span>;
 <span>console</span>.<span>log</span>(<span><b>typeof</b></span> message); <span>// wyświetli "string"</span>
