--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <li><a href="./word-list/n/number.html">liczby</a></li><!--20-->
     <li><a href="./word-list/s/string.html">string</a></li><!--21-->
     <li><a href="./word-list/s/string.html">ciąg znaków</a></li><!--21-->
+    <li><a href="./word-list/s/string.html">konkatenacja</a></li><!--21-->
     <li><a href="./word-list/b/boolean.html">boolean</a></li><!--22-->
     <li><a href="./word-list/b/boolean.html">wartość logiczna</a></li><!--22-->
     <li><a href="./word-list/b/boolean.html">true</a></li><!--22-->
@@ -62,7 +63,15 @@
     <li><a href="./word-list/o/operatoryMatematyczne.html">mathematical operators</a></li><!--26-->
     <li><a href="./word-list/o/operatoryMatematyczne.html">operators</a></li><!--26-->
     <li><a href="./word-list/o/operatoryMatematyczne.html">operatory złożone</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">operational connection</a></li><!--26-->
     <li><a href="./word-list/o/operatoryMatematyczne.html">operatory arytmetyczne</a></li><!--26-->
+    <li><a href="./word-list/o/operatoryMatematyczne.html">arithmetic operators</a></li><!--26-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">Konwersja typów</a></li><!--27-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">Type conversion</a></li><!--27-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">String()</a></li><!--27-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">Number()</a></li><!--27-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">Boolean()</a></li><!--27-->
+    <li><a href="./word-list/k/KonwersjaTypów.html">Object()</a></li><!--27-->
 
 
 
