--- a/word-list/n/null.html
+++ b/word-list/n/null.html
@@ -22,7 +22,7 @@
    </pre>
 
   <p>Operator <a href="">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
-
+  <p>Typy danych można zmienić za pomocą <a href="../k/KonwersjaTypów.html">konwersji</a>.</p>
   <p>Zobacz wszystkie <a href="../p/PrymitywneTypyDanych.html">typy prymitywne</a></p><br><br>
 
 </body>
