--- a/word-list/p/PrymitywneTypyDanych.html
+++ b/word-list/p/PrymitywneTypyDanych.html
@@ -23,6 +23,7 @@
   <p><a href="">Symbol</a> - nowy prymitywny typ dodany w ECMAScript 6 (ES6)</p>
   <p><a href="">BigInt</a> - liczby całkowite o dowolnej precyzji, dodany w ECMAScript 2020 (ES11)</p>
   <p>Operator <a href="../t/typeof.html">typeof</a> służy do określania typu danych wartości lub wyrażenia.</p>
+  <p>Typy danych można zmienić za pomocą <a href="../k/KonwersjaTypów.html">konwersji</a>.</p>
   </p><br><br>
 
 
