--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <li><a href="./word-list/s/string.html">string</a></li><!--21-->
     <li><a href="./word-list/s/string.html">ciąg znaków</a></li><!--21-->
     <li><a href="./word-list/s/string.html">konkatenacja</a></li><!--21-->
+    <li><a href="./word-list/s/string.html">indeks</a></li><!--21-->
     <li><a href="./word-list/b/boolean.html">boolean</a></li><!--22-->
     <li><a href="./word-list/b/boolean.html">wartość logiczna</a></li><!--22-->
     <li><a href="./word-list/b/boolean.html">true</a></li><!--22-->
@@ -72,6 +73,15 @@
     <li><a href="./word-list/k/KonwersjaTypów.html">Number()</a></li><!--27-->
     <li><a href="./word-list/k/KonwersjaTypów.html">Boolean()</a></li><!--27-->
     <li><a href="./word-list/k/KonwersjaTypów.html">Object()</a></li><!--27-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">Ciągi szablonowe</a></li><!--28-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">Template strings</a></li><!--28-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">interpolacja</a></li><!--28-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">interpolation</a></li><!--28-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">statyczny tekst</a></li><!--28-->
+    <li><a href="./word-list/c/ciągiSzablonowe.html">dynamiczny tekst</a></li><!--28-->
+    <li><a href="./word-list/w/właściwości.html">właściwości</a></li><!--29-->
+    <li><a href="./word-list/w/właściwości.html">property</a></li><!--29-->
+    <li><a href="./word-list/w/właściwości.html">length</a></li><!--29-->
 
 
 
