--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="search-container">
-    <input type="text" id="search-input" placeholder="Search...">
+    <input type="text" id="search-input" placeholder="Search..." autocomplete="off">
     <button id="search-button">Search</button>
     <ul id="suggestions" class="suggestions"></ul>
 
@@ -82,6 +82,25 @@
     <li><a href="./word-list/w/właściwości.html">właściwości</a></li><!--29-->
     <li><a href="./word-list/w/właściwości.html">property</a></li><!--29-->
     <li><a href="./word-list/w/właściwości.html">length</a></li><!--29-->
+    <li><a href="./word-list/o/operatoryPorównania.html">operatory porównania</a></li><!--30-->
+    <li><a href="./word-list/o/operatoryPorównania.html">porównanie</a></li><!--30-->
+    <li><a href="./word-list/o/operatoryPorównania.html">operator comparison</a></li><!--30-->
+    <li><a href="./word-list/o/operatoryPorównania.html">comparison</a></li><!--30-->
+    <li><a href="./word-list/o/operatoryRówności.html">operatory równości</a></li><!--31-->
+    <li><a href="./word-list/o/operatoryRówności.html">equality operators</a></li><!--31-->
+    <li><a href="./word-list/m/metody.html">metody</a></li><!--32-->
+    <li><a href="./word-list/m/metody.html">methods</a></li><!--32-->
+    <li><a href="./word-list/n/Number.parseInt().html">Number.parseInt()</a></li><!--33-->
+    <li><a href="./word-list/n/Number.parseFloat().html">Number.parseFloat()</a></li><!--34-->
+    <li><a href="./word-list/m/math.html">Klasa Math</a></li><!--35-->
+    <li><a href="./word-list/m/math.html">Math.floor(num)</a></li><!--36-->
+    <li><a href="./word-list/m/math.html">Math.ceil(num)</a></li><!--37-->
+    <li><a href="./word-list/m/math.html">Math.round(num)</a></li><!--38-->
+    <li><a href="./word-list/m/math.html">Math.max(num1, num2, ...)</a></li><!--39-->
+    <li><a href="./word-list/m/math.html">Math.min(num1, num2, ...)</a></li><!--40-->
+    <li><a href="./word-list/m/math.html">Math.random()</a></li><!--41-->
+    <li><a href="./word-list/f/funkcje.html">funkcja</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">function</a></li><!--42-->
 
 
 
