--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
     <li><a href="./word-list/m/math.html">Math.random()</a></li><!--41-->
     <li><a href="./word-list/f/funkcje.html">funkcja</a></li><!--42-->
     <li><a href="./word-list/f/funkcje.html">function</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">parametry funkcji</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">function parameters</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">parameters</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">argumenty</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">arguments</a></li><!--42-->
+    <li><a href="./word-list/f/funkcje.html">return</a></li><!--42-->
+
 
 
 
