--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
     <li><a href="./word-list/f/funkcje.html">argumenty</a></li><!--42-->
     <li><a href="./word-list/f/funkcje.html">arguments</a></li><!--42-->
     <li><a href="./word-list/f/funkcje.html">return</a></li><!--42-->
+    <li><a href="./word-list/i/if.html">if</a></li><!--43-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">operatory logiczne</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">logical operators</a></li><!--44-->
+    <li><a href="./word-list/r/rozwidlenia.html">rozwidlenia</a></li><!--45-->
+    <li><a href="./word-list/r/rozwidlenia.html">forks</a></li><!--45-->
+    <li><a href="./word-list/o/operatorTrójargumentowy.html">operator trójargumentowy</a></li><!--46-->
+    <li><a href="./word-list/o/operatorTrójargumentowy.html">ternary operator</a></li><!--46-->
+    <li><a href="./word-list/s/switch.html">switch</a></li><!--47-->
+    <li><a href="./word-list/s/switch.html">break</a></li><!--48-->
+    <li><a href="./word-list/s/switch.html">fall-through</a></li><!--49-->
 
 
 
