--- a/word-list/m/metody.html
+++ b/word-list/m/metody.html
@@ -19,6 +19,7 @@
     <li><a href="./math.html">Math.min(num1, num2, ...)</a></li>
     <li><a href="./math.html">Math.random()</a></li>
     <li><a href="../o/operatoryMatematyczne.html">toFixed()</a></li>
+    <li><a href="../o/operatoryMatematyczne.html">slice() - metody ciągów znaków</a></li>
 
   </ul>
   <br><br>
