--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
     <li><a href="./word-list/i/if.html">if</a></li><!--43-->
     <li><a href="./word-list/o/operatoryLogiczne.html">operatory logiczne</a></li><!--44-->
     <li><a href="./word-list/o/operatoryLogiczne.html">logical operators</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">I</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">&&</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">||</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">lub</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">no</a></li><!--44-->
+    <li><a href="./word-list/o/operatoryLogiczne.html">!</a></li><!--44-->
     <li><a href="./word-list/r/rozwidlenia.html">rozwidlenia</a></li><!--45-->
     <li><a href="./word-list/r/rozwidlenia.html">forks</a></li><!--45-->
     <li><a href="./word-list/o/operatorTrójargumentowy.html">operator trójargumentowy</a></li><!--46-->
@@ -117,6 +123,21 @@
     <li><a href="./word-list/s/switch.html">switch</a></li><!--47-->
     <li><a href="./word-list/s/switch.html">break</a></li><!--48-->
     <li><a href="./word-list/s/switch.html">fall-through</a></li><!--49-->
+    <li><a href="./word-list/t/toUpperCase.html">toUpperCase()</a></li><!--50-->
+    <li><a href="./word-list/s/slice.html">slice()</a></li><!--51-->
+    <li><a href="./word-list/t/toLowerCase.html">toLowerCase()</a></li><!--52-->
+    <li><a href="./word-list/t/toLowerCase.html">normalizacji</a></li><!--53-->
+    <li><a href="./word-list/i/includes.html">includes()</a></li><!--54-->
+    <li><a href="./word-list/s/startsWith.html">startsWith()</a></li><!--55-->
+    <li><a href="./word-list/e/endsWith.html">endsWith()</a></li><!--56-->
+    <li><a href="./word-list/i/indexOf.html">indexOf()</a></li><!--57-->
+    <li><a href="./word-list/t/trim.html">trim()</a></li><!--58-->
+    <li><a href="./word-list/p/pętle.html">pętle</a></li><!--59-->
+    <li><a href="./word-list/p/pętle.html">loops</a></li><!--59-->
+    <li><a href="./word-list/p/pętle.html">ciało pętli</a></li><!--59-->
+    <li><a href="./word-list/p/pętle.html">iteracja</a></li><!--59-->
+    <li><a href="./word-list/p/pętle.html">warunek wyjścia</a></li><!--59-->
+    <li><a href="./word-list/w/while.html">while</a></li><!--59-->
 
 
 
