--- a/word-list/m/metody.html
+++ b/word-list/m/metody.html
@@ -12,14 +12,22 @@
   <ul><b>Metody (EN methods)</b>:
     <li><a href="../n/Number.parseInt().html">Number.parseInt()</a></li>
     <li><a href="../n/Number.parseFloat().html">Number.parseFloat()</a></li>
-    <li><a href="./math.html">Math.floor(num)</a></li>
-    <li><a href="./math.html">Math.ceil(num)</a></li>
-    <li><a href="./math.html">Math.round(num)</a></li>
-    <li><a href="./math.html">Math.max(num1, num2, ...)</a></li>
-    <li><a href="./math.html">Math.min(num1, num2, ...)</a></li>
-    <li><a href="./math.html">Math.random()</a></li>
-    <li><a href="../o/operatoryMatematyczne.html">toFixed()</a></li>
-    <li><a href="../o/operatoryMatematyczne.html">slice() - metody ciągów znaków</a></li>
+    <li><a href="./math.html">Math.floor(num) - metoda klasy Math</a></li>
+    <li><a href="./math.html">Math.ceil(num) - metoda klasy Math</a></li>
+    <li><a href="./math.html">Math.round(num) - metoda klasy Math</a></li>
+    <li><a href="./math.html">Math.max(num1, num2, ...) - metoda klasy Math</a></li>
+    <li><a href="./math.html">Math.min(num1, num2, ...) - metoda klasy Math</a></li>
+    <li><a href="./math.html">Math.random() - metoda klasy Math</a></li>
+    <li><a href="../o/operatoryMatematyczne.html">objectName.toFixed()</a></li>
+    <li><a href="../s/slice.html">objectName.slice() - metody ciągów znaków</a></li>
+    <li><a href="../t/toUpperCase.html">objectName.toUpperCase() - metody ciągów znaków</a></li>
+    <li><a href="../t/toLowerCase.html">objectName.toLowerCase() - metody ciągów znaków</a></li>
+    <li><a href="../i/includes.html">objectName.includes() - metody ciągów znaków</a></li>
+    <li><a href="../s/startsWith.html">objectName.startsWith() - metody ciągów znaków</a></li>
+    <li><a href="../e/endsWith.html">objectName.endsWith() - metody ciągów znaków</a></li>
+    <li><a href="../i/indexOf.html">objectName.indexOf() - metody ciągów znaków</a></li>
+    <li><a href="../t/trim.html">objectName.trim() - metody ciągów znaków</a></li>
+
 
   </ul>
   <br><br>
